--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Hunter Chang",
   "dependencies": {
+    "acorn": "^8.0.1",
     "gatsby": "^2.24.2",
     "gatsby-plugin-google-analytics": "^2.1.26",
     "gatsby-plugin-manifest": "^2.2.20",
@@ -12,8 +13,9 @@
     "gatsby-plugin-sass": "^2.1.17",
     "node-sass": "^4.14.1",
     "react": "^16.10.0",
-    "react-dom": "^16.10.0",
-    "react-helmet": "^5.2.1"
+    "react-dom": "^16.13.1",
+    "react-helmet": "^5.2.1",
+    "react-refresh": "^0.8.3"
   },
   "keywords": [
     "gatsby"
